--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,8 @@ body {
   background-color: #040503;
   color: white;
   display: flex;
-  padding: 6px 6px;
+  align-items: center;
+  /* padding: 6px 6px; */
   font-size: 14px;
   justify-content: space-around;
 }
